# GameSignHub

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
app/: __init__.py  config.py  database.py  main.py  schemas.py
app/core/: __init__.py  auth.py  config.py  crud_log.py  crud_yaml.py  db.py  orchestrator.py  plugin_base.py  plugin_loader.py  scheduler.py  security.py  vault.py  yaml_store.py
app/models/: __init__.py  config.py  credential.py  sign_log.py
app/routers/: __init__.py  accounts.py  auth.py  credentials.py  deps.py  logs.py  plugins.py  schedule.py  sign.py
app/schemas/: __init__.py  auth.py  credential.py  log.py  sign.py
app/utils/: __init__.py  encryption.py
config/: gamesignhub.db  settings.yaml
docs/: backend-architecture.md  backend.md  frontend.md  test.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/components/: AccountTable.vue  ChangePasswordForm.vue  LogTerminal.vue  WelcomePage.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/utils/: color.ts  pinyin.ts
frontend/src/views/: AppView.vue  Credentials.vue  Dashboard.vue  Logs.vue  Unlock.vue
plugins/kuro_plugin/: __init__.py  client.py  forum.py  models.py  plugin.py
plugins/mhy_plugin/: __init__.py  plugin.py
tests/: conftest.py  test_credentials_router.py  test_crud_log.py  test_game_accounts_router.py  test_orchestrator.py  test_vault.py
(+3 files in other folders)
